.service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: apps
  name: rancher-linode
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    workload.user.cattle.io/workloadselector: deployment-apps-rancher-linode
  sessionAffinity: None
  type: ClusterIP
