deployment.yml
apiVersion: v1
kind: Service
metadata:
  namespace: apps
  name: rancher-linode
spec:
  clusterIP: None
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    workload.user.cattle.io/workloadselector: deployment-apps-rancher-linode
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: apps
  name: rancher-linode
  labels:
    workload.user.cattle.io/workloadselector: deployment-apps-rancher-linode
spec:
  replicas: 3
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-apps-rancher-linode
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: deployment-apps-rancher-linode
    spec:
      containers:
      - name: rancher-linode
        image: thetablestop/rancher-linode
        imagePullPolicy: Always
        env:
        - name: NODE_ENV
          value: Production
        - name: NODE_PORT
          value: "8080"
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
        volumeMounts:
        - mountPath: /mnt/nodeshared
          name: nodeshared
      volumes:
      - hostPath:
          path: /mnt/host
          type: DirectoryOrCreate
        name: nodeshared
